--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,5 +1,13 @@
 @CHARSET "ISO-8859-1";
 
+body {
+	font-family: Georgia, serif;
+	height: 100%;
+	margin: 0;
+	text-align: center;
+	width: 100%;
+}
+
  fieldset {
   margin-bottom: 1em;
 }
@@ -9,7 +17,7 @@
 	margin-bottom: .25em;
 }
 
-.triger {
+.click {
 	height: 60px;
 	width: 100px;
 	border-radius: 5px;
@@ -21,5 +29,7 @@
 }
 
 .print-output {
-	width: 100%;
+	height: 100px;
+	width: 100px;
+	background-color: lightblue;
 }
