--- a/WebContent/css/style_notebook.css
+++ b/WebContent/css/style_notebook.css
@@ -6,18 +6,19 @@
 	margin-bottom: 1em;
 }
 
-h2 {
+#h2 {
 	margin: auto;
+	width: 300px;
 	margin-top: 1.25em;
 }
 
- fieldset {
+fieldset {
   margin:auto;
   margin-bottom: 1em;
   width: 600px;
 }
 
- input {
+input {
 	display: block;
 	margin-bottom: .25em;
 	width: 300px;
@@ -33,8 +34,7 @@ h2 {
 }
 
 #triger {
-	font-size:15px;
+	font-size: 15px;
 	margin: auto;
 	width: 80px;
-	
 }
