--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -44,10 +44,10 @@ h2 {
 	opacity: 0.5;
 }
 
-.print-output {
+/*.print-output {
 	height: 200px;
 	width: 600px;
 	background-color: lightblue;
 	margin: auto;
 	margin-top: 1em;
-}
+}*/
