--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,6 +1,7 @@
 @CHARSET "ISO-8859-1";
 
 body {
+    background-image: url("http://www.biansi.net/images/light-blue-wallpapers/light-blue-wallpapers-19.jpg");
 	font-family: Georgia, serif;
 	height: 100%;
 	margin: 0;
@@ -43,11 +44,3 @@ h2 {
 	font-family: Verdana, Arial, Sans-Serif;
 	opacity: 0.5;
 }
-
-/*.print-output {
-	height: 200px;
-	width: 600px;
-	background-color: lightblue;
-	margin: auto;
-	margin-top: 1em;
-}*/
